--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "standard",
     "lint:fix": "standard --fix",
+    "preversion": "npm run test",
     "posttest": "npm run lint",
     "test": "NODE_ENV=test nyc mocha test/*.js --check-leaks"
   },
