--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "posttest": "npm run lint",
     "test": "NODE_ENV=test nyc mocha test/*.js --check-leaks"
   },
+  "files": [
+    "lib/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wraithgar/spawk.git"
