fix(interceptor): emit stdio close events
node v10 and v12 don't do this automatically

--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "posttest": "npm run lint",
     "test": "NODE_ENV=test nyc mocha test/*.js --check-leaks"
   },
+  "enginesStrict": true,
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "files": [
     "lib/"
   ],
