--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/wraithgar/spawk#readme",
   "devDependencies": {
     "chai": "^4.3.0",
+    "faker": "^5.4.0",
     "mocha": "^8.3.0",
     "nyc": "^15.1.0",
     "standard": "^16.0.3"
