--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint:fix": "standard --fix",
     "preversion": "npm run test",
     "posttest": "npm run lint",
-    "test": "NODE_ENV=test nyc mocha --check-leaks"
+    "test": "nyc mocha --check-leaks"
   },
   "enginesStrict": true,
   "engines": {
