--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.1",
   "description": "child_process.spawn mocking library",
   "main": "lib/spawk.js",
+  "types": "./types/spawk.d.ts",
   "scripts": {
     "lint": "standard",
     "lint:fix": "standard --fix",
@@ -15,7 +16,8 @@
     "node": ">=10.0.0"
   },
   "files": [
-    "lib/"
+    "lib/",
+    "types/"
   ],
   "repository": {
     "type": "git",
